cluster/apps/default/whoami/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`whoami.${SECRET_DOMAIN}`)
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: traefik-forward-auth
  tls:
    certResolver: cloudflare # was 'default'
